<resources>
    <string name="app_name">Weather Puzzle Game</string>
    <string name="play_button">Play</string>
    <string name="exit">Exit</string>
    <string name="feedback_title">Feedback: </string>
    <string name="moves_title">Moves</string>
    <string name="game_feedback_text">Make a move</string>
    <string name="credits">Credits</string>
    <string name="name1">Ulises Morales Ramirez</string>
    <string name="team">Josemanuel Magaña</string>
    <string name="message">Thanks for play!</string>
    <string name="help">Help</string>
    <string name="message2">Move the selected piece together the blank, only just a click</string>
    <string name="shuffle">Restart</string>
    <string name="win">Climate change is the greatest environmental threat facing humanity. Its consequences primarily affect the developing countries and result in floods, droughts, hurricanes and all kinds of natural disasters that leave the destitute and without means of subsistence population.</string>
    <string name="imagefooter">Actuality</string>
    <string name="hintzoom">View Image</string>
    <string name="score">Score</string>
    <string name="singin">Write your name</string>
    <string name="setPlayerName">Player</string>
    <string name="winmessage">Your record is</string>
    <string name="scorebutton">Score</string>
    <string name="name">Write your name</string>
    <string name="before">Before</string>
    <string name="lose">YOU HAVE EXCEEDED THE LIMIT OF 500 MOVEMENTS</string>
    <string name="messagelose">YOU LOSE</string>
</resources>
