<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fcreditos"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25dip"
        android:text="@string/name1"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25dip"
        android:text="@string/team"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="43dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11dp"
        android:text="@string/message"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:textStyle="bold|italic"
        android:layout_marginLeft="130dp"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignParentEnd="true"
        android:id="@+id/textView3"
        android:layout_marginRight="29dp" />

    <ImageView
        android:layout_width="147dp"
        android:layout_height="147dp"
        android:id="@+id/imageView2"
        android:layout_gravity="bottom|center"
        android:background="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
