<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.ulisesprofe.weathergame.Win"
    android:background="@android:color/holo_blue_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win"
        android:id="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scorebutton"
        android:id="@+id/scorebutton"
        android:onClick="score"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_above="@+id/scorebutton"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_gravity="right" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:id="@+id/imageView"
                    android:background="@drawable/original2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/before"
                    android:id="@+id/textView7"
                    android:layout_gravity="center_horizontal" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:id="@+id/imageView4"
                    android:background="@drawable/despues"
                    android:layout_above="@+id/scorebutton"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/imagefooter"
                    android:id="@+id/textView5"
                    android:textAlignment="center"
                    android:layout_above="@+id/scorebutton"
                    android:layout_alignParentStart="true" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>
