<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.ulisesprofe.weathergame.main"
    android:orientation="vertical"
    android:weightSum="1">

<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="@dimen/gameframelayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    android:id="@+id/frame">

        <Button
            android:layout_width="@dimen/boton"
            android:layout_height="@dimen/boton"
            android:text="0"
            android:id="@+id/Button00"
            android:layout_gravity="top|left"
            android:background="@android:color/transparent"
            android:textSize="0sp" />

        <Button
            android:layout_width="@dimen/boton"
            android:layout_height="@dimen/boton"
            android:text="1"
            android:id="@+id/Button01"
            android:layout_gravity="top|center_horizontal"
            android:background="@drawable/f1"
            android:textSize="0sp" />

        <Button
            android:layout_width="@dimen/boton"
            android:layout_height="@dimen/boton"
            android:text="2"
            android:id="@+id/Button02"
            android:layout_gravity="top|right"
            android:background="@drawable/f2"
            android:textSize="0sp" />

        <Button
            android:layout_width="@dimen/boton"
            android:layout_height="@dimen/boton"
            android:text="3"
            android:id="@+id/Button03"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/f3"
            android:textSize="0sp" />

        <Button
            android:layout_width="@dimen/boton"
            android:layout_height="@dimen/boton"
            android:text="4"
            android:id="@+id/Button04"
            android:layout_gravity="center"
            android:background="@drawable/f4"
            android:textSize="0sp" />

        <Button
            android:layout_width="@dimen/boton"
            android:layout_height="@dimen/boton"
            android:text="5"
            android:id="@+id/Button05"
            android:layout_gravity="center_vertical|right"
            android:background="@drawable/f5"
            android:textSize="0sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/boton"
            android:layout_height="@dimen/boton"
            android:text="6"
            android:id="@+id/Button06"
            android:layout_gravity="left|bottom"
            android:background="@drawable/f6"
            android:textSize="0sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/boton"
            android:layout_height="@dimen/boton"
            android:text="7"
            android:id="@+id/Button07"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/f7"
            android:textSize="0sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/boton"
            android:layout_height="@dimen/boton"
            android:text="8"
            android:id="@+id/Button08"
            android:layout_gravity="bottom|right"
            android:background="@drawable/f8"
            android:textSize="0sp" />
    </FrameLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Shuffle"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.05"
            android:text="@string/shuffle" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layoutfeedbackheight"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/linearLayout"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/FeedbackTitleText">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moves_title"
                    android:id="@+id/MoveText"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:layout_alignEnd="@+id/MoveCounter"
                    android:textAlignment="center" />

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:id="@+id/MoveCounter"
                    android:layout_alignParentLeft="true"
                        android:layout_marginLeft="0dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="0dp"
                    android:textAlignment="center" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:id="@+id/button"
                    android:layout_marginLeft="20dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="80dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hintzoom"
                    android:id="@+id/hintzoom"
                    android:textAlignment="center" />

                <ImageView
                    android:layout_width="@dimen/boton2"
                    android:layout_height="@dimen/boton2"
                    android:id="@+id/zoomImage"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/zoom"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:id="@+id/chance"
                    android:layout_gravity="center" />
            </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_title"
            android:id="@+id/FeedbackTitleText"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView6"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="200dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_feedback_text"
            android:layout_gravity="center_horizontal"
        android:id="@+id/FeedbackText" />


</LinearLayout>
